add readme, fix ci cd config, NonNull annotation